--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Submition1"
         tools:targetApi="31">
         <activity
-            android:name=".ui.DetailUserActivity"
+            android:name=".ui.detail.DetailUserActivity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
@@ -23,7 +23,7 @@
             android:name=".ui.MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.SplashScreenActivity"
+            android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
