--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("com.google.devtools.ksp")
     id("kotlin-parcelize")
 }
 
@@ -36,6 +37,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation("com.github.bumptech.glide:glide:4.16.0")
@@ -49,6 +51,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
+
     implementation"com.github.bumptech.glide:glide:4.16.0"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
+
+    implementation("androidx.room:room-runtime:2.5.2")
+    ksp("androidx.room:room-compiler:2.5.2")
+
 }
