--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_github"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Submition1"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.SwichActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.favorite.FavoriteActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.detail.DetailUserActivity"
             android:exported="false" />
